kubernetes/speedtest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: misc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: misc
  labels:
    app: speedtest
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: ghcr.io/librespeed/speedtest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: misc
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt
  name: speedtest
  namespace: misc
spec:
  rules:
  - host: speed.aictur.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: speedtest
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - speed.aictur.dev
    secretName: speedtest-tls-ingress # < cert-manager will store the created certificate in this secret.
